# wolof-nlp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
data/: gold_standard.json
docs/: architecture.md  corpus-validation.md  evaluation.md  index.md  installation.md  quickstart.md  references.md
docs/api/: applications.md  core.md  lexicon.md  morphology.md  semantics.md  syntax.md
docs/linguistics/: noun-classes.md  orthography.md  tam-system.md  verbal-derivation.md
notebooks/: 01_quickstart.ipynb  02_applications.ipynb  03_evaluation.ipynb
src/wolof_nlp/: __init__.py
src/wolof_nlp/applications/: __init__.py  glosser.py  ner.py  pos_tagger.py  sentiment.py
src/wolof_nlp/core/: __init__.py  constants.py  normalizer.py  tokenizer.py
src/wolof_nlp/lexicon/: __init__.py  collocations.py  dictionary.py  proverbs.py  utils.py
src/wolof_nlp/morphology/: __init__.py  analyzer.py  lemmatizer.py  verb_conjugator.py
src/wolof_nlp/semantics/: __init__.py  noun_classes.py  spatial.py  temporal.py
src/wolof_nlp/syntax/: __init__.py  clause_analyzer.py  sentence_parser.py
tests/: test_wolof_nlp.py
