[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wolof-nlp"
version = "0.1.0"
description = "Linguistically-informed NLP toolkit for the Wolof language"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Maimouna MBACKE"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["wolof", "nlp", "tokenizer", "morphology", "african-languages", "senegal"]

[project.urls]
Homepage = "https://github.com/maimouna-mbacke/wolof-nlp"
Repository = "https://github.com/maimouna-mbacke/wolof-nlp"
Documentation = "https://github.com/maimouna-mbacke/wolof-nlp#readme"
Issues = "https://github.com/maimouna-mbacke/wolof-nlp/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["src"]
